# agentflow

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  index.md
docs/api/: config.md  index.md  types.md
docs/concepts/: architecture.md  context-files.md  events.md  memory.md  providers.md  routing.md  sessions.md  tools.md  workflows.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: custom-provider.md  domain-routing.md  foreach-workflow.md  multi-agent-pipeline.md
src/agentflow/: __init__.py  events.py  protocols.py  types.py
src/agentflow/agent/: __init__.py  context.py  prompt.py  runtime.py
src/agentflow/config/: __init__.py  loader.py  parser.py  resolver.py  schemas.py
src/agentflow/memory/: __init__.py  file_memory.py  manager.py  vector_memory.py
src/agentflow/memory/backends/: __init__.py  chroma_backend.py  lancedb_backend.py  qdrant_backend.py
src/agentflow/orchestration/: __init__.py  classifier.py  executor.py  types.py
src/agentflow/providers/: __init__.py  anthropic.py  google_genai.py  mock.py  openai_compat.py
src/agentflow/router/: __init__.py  domain_router.py  engine.py  rules.py
src/agentflow/session/: __init__.py  artifacts.py  manager.py  multi_user.py  scratchpad.py
src/agentflow/storage/: __init__.py  filesystem.py  memory_storage.py  s3.py
src/agentflow/telemetry/: __init__.py  langfuse_handler.py
src/agentflow/tools/: __init__.py  http_dispatcher.py  local_dispatcher.py  registry.py
src/agentflow/workflow/: __init__.py  dag.py  executor.py  node.py
tests/: test_agent.py  test_config.py  test_context_resolver.py  test_memory.py  test_phase5_backends.py  test_phase_a_routing.py  test_router.py  test_session.py  test_storage.py  test_tools.py  test_types.py  test_workflow.py
