[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "0.1.0"
description = "Context engineering framework for multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.7.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.42.0"]
openai = ["openai>=1.0.0"]
google = ["google-genai>=1.0.0"]
s3 = ["boto3>=1.34.0"]
vector = ["qdrant-client>=1.9.0"]
all = ["agentflow[anthropic,openai,google,s3,vector]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
