[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gittielabs-agentflow"
version = "0.7.5"
description = "Context engineering framework for multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "GittieLabs", email = "hello@gittielabs.com" },
]
keywords = [
    "agent", "multi-agent", "llm", "ai", "workflow",
    "context-engineering", "orchestration", "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/GittieLabs/agentflow"
Documentation = "https://gittielabs.github.io/agentflow/"
Repository = "https://github.com/GittieLabs/agentflow"
Issues = "https://github.com/GittieLabs/agentflow/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.42.0"]
openai = ["openai>=1.0.0"]
google = ["google-genai>=1.0.0"]
s3 = ["boto3>=1.34.0"]
vector = ["qdrant-client>=1.9.0"]
orchestration = ["anthropic>=0.42.0"]
telemetry = ["langfuse>=4.0"]
all = ["gittielabs-agentflow[anthropic,openai,google,s3,vector,orchestration,telemetry]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
